# chuetchuet

./: .eslintrc  .gitignore  .gitpod.yml  .prettierignore  DESIGN.md  PRODUCT.md  README.md  package.json
app/: package.json
client/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.tsx
client/src/components/: auth.tsx
client/src/pages/: Home.tsx  Login.tsx  Settings.tsx  StartExperience.tsx
server/: .env  Cargo.toml
server/migrations/: 20220517234530_create_products.down.sql  20220517234530_create_products.up.sql  20220518011631_create_users.up.sql
server/src/: graph.rs  main.rs  schema.rs
server/src/graph/: auth.rs  product.rs
server/src/schema/: auth.rs  product.rs
