[package]
name = "terra-noun-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-graphql = { version = "4.0.1", features = ["uuid", "chrono"] }
async-graphql-rocket = "4.0.1"
base64 = "0.13.0"
chrono = "0.4.19"
dotenv = "0.15.0"
jsonwebtoken = "8.1.0"
once_cell = "1.12.0"
rand = "0.8.5"
regex = "1.5.5"
rocket = "0.5.0-rc.2"
rust-argon2 = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { git = "https://github.com/launchbadge/sqlx", rev = "fa5c436", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] } # uuid 1.0 support
uuid = { version = "1.1.0", features = ["v4", "serde"] }
